--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         </div>
         
         <div class="tree-container">
+            <div class="tree-controls" id="tree-controls" style="display: none;">
+                <button id="select-all-btn" class="control-btn">全选</button>
+                <button id="deselect-all-btn" class="control-btn">取消所有选择</button>
+                <button id="invert-selection-btn" class="control-btn">反选</button>
+            </div>
             <div id="tree-content" class="tree-content">
                 <p class="placeholder-text">请导入.prefab文件以开始解析</p>
             </div>
