--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button id="select-all-btn" class="control-btn">全选</button>
         <button id="deselect-all-btn" class="control-btn">取消所有</button>
         <button id="invert-selection-btn" class="control-btn">反选</button>
-        <button id="auto-select-children" class="toggle-button">自动选择子层级</button>
+        <button id="auto-select-children" class="toggle-button">同步操作子层级</button>
     </div>
             <div id="tree-content" class="tree-content">
                 <p class="placeholder-text">请导入Unity资产文件以开始解析</p>
