--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         
         <div class="tree-container">
             <div class="tree-controls" id="tree-controls" style="display: none;">
+        <button id="preserve-hierarchy" class="toggle-button active">保留层级</button>
         <button id="select-all-btn" class="control-btn">全选</button>
         <button id="deselect-all-btn" class="control-btn">取消所有</button>
         <button id="invert-selection-btn" class="control-btn">反选</button>
